--- a/runscore-mobile/src/main/resources/templates/recharge.html
+++ b/runscore-mobile/src/main/resources/templates/recharge.html
@@ -330,24 +330,36 @@
     </template>
     <template v-if="waitFlag && !confirmPage">
         <div class="line"></div>
-        <div class="refresh2 button" @click="refreshLocal">刷新界面</div>
+        <div class="refresh2 button" @click="refreshLocal" v-if="!readyFlag">刷新界面</div>
+        <div class="refresh2 button"
+             @click="toPay"
+             v-if="readyFlag"
+             style="background: green"
+        >查看支付信息
+        </div>
         <div class="line"></div>
-        <p class="queue">
+        <p class="queue" v-if="queue!==0">
             前面还有： <span>{{queue}}</span>人排队充值。
         </p>
+        <p class="queue" v-else>
+            请在 {{time}} 秒内点击获取支付信息，超时将取消排队！
+        </p>
+
         <p class="tips">
-            【本页面会在排队到达后自动跳转充值页面】 排队人数30秒刷新一次，请注意关注！
+            充值银行卡持卡人姓名:【{{name}}】
+        </p>
+        <p class="tips">
+            充值金额: 【{{value}}】
         </p>
         <div class="warning">
             <h3>注意事项</h3>
             <ul class="page2">
-                <li>1.下一次排队数据重置将在{{refreshTime}}进行，请注意数据更行！</li>
+                <li>1.请注意数据更新！一分钟不确认充值显示银行卡，排队自动作废！</li>
                 <li>2.请勿填写附言，填写附言后无法自动到账！</li>
                 <li>3.平台填写金额应当于银行转账金额完全一直，否则将无法及时到账！</li>
                 <li>4.平台的收款账号会不定时更换，请在获取最近信息后充值，否则将无法及时到账。</li>
                 <li>5.填写姓名于您的银行卡持卡人姓名不一致，无法自动到账！</li>
                 <li>6.若出现2小时为到账的情况，请及时联系在线客服哦！</li>
-                <li>7.一分钟不确认充值显示银行卡，排队自动作废！</li>
             </ul>
         </div>
         <div class="button" @click="exit">退出排队</div>
@@ -395,25 +407,29 @@
             name: "",
             value: "",
             waitFlag: false,
+            readyFlag: false,
             toastShow: false,
             toastContent: "",
             confirmPage: false,
+            time: 60,
+            timer2: null, // 超时timer
+            timer: null,
             // 后端获取
-            queue: 30,
+            username: null,
+            queue: "获取中...",
             refreshTime: "2020-2-2 2:00:00",
             min: 300,
             max: 10000,
             getWaitInfoUrl: "",
             quickInputAmount: null,
-            bankCardList: []
+            bankCardList: [],
 
 
         },
         created() {
             this.getPreChargeInfo();  // 获取基础信息 大小值
             this.getbankCardInfo();  // 点开获取银行信息
-            // this.getWaitInfo
-            this.getUserAccountInfo()
+            this.getUserAccountInfo();  // 获取用户名
         },
         methods: {
             getPreChargeInfo() {
@@ -429,7 +445,6 @@
                 // todo 目前只提取银行卡信息
                 axios.get(url).then(ret => {
                     let allList = ret.data.data;
-                    console.log(allList)
                     allList.forEach(item => {
                         if (item.channelCode === "yhk") {
                             this.bankCardList.push({
@@ -439,7 +454,6 @@
                             })
                         }
                     })
-                    console.log(this.bankCardList)
                 })
             },
             set(value) {
@@ -451,10 +465,11 @@
             refreshLocal() {
 
             },
-            getUserAccountInfo : function() {
+            getUserAccountInfo: function () {
                 var that = this;
-                that.$http.get('/userAccount/getUserAccountInfo').then(function(res) {
-                    console.log(res)
+                that.$http.get('/userAccount/getUserAccountInfo').then(function (ret) {
+                    this.username = ret.body.data.userName;
+                    this.getWaitInfo()
                 });
             },
             submit() {
@@ -477,9 +492,30 @@
                 }
                 this.waitFlag = true;
                 this.getRechargeLineUp();
+                this.getWaitInfo()
             },
             exit() {
-                this.waitFlag = false
+                this.waitFlag = false;
+                console.log(this.waitFlag, this.confirmPage)
+                this.setStatus(3);
+            },
+            setStatus(statusCode) { // （0=进去排队，1=排队完毕，2=正在充值，3=完毕）
+                let url = "/recharge/updateChargeWaitState";
+                axios.post(url, {
+                    state: statusCode
+                }, {
+                    transformRequest: [function (data) {
+                        // Do whatever you want to transform the data
+                        let ret = ''
+                        for (let it in data) {
+                            ret += encodeURIComponent(it) + '=' + encodeURIComponent(data[it]) + '&'
+                        }
+                        return ret
+                    }],
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded'
+                    }
+                })
             },
             getRechargeLineUp() {
                 let url = "/recharge/rechargeLineUp";
@@ -498,10 +534,15 @@
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded'
                     }
-                }).then(ret=>{
-                    console.log(ret)
+                }).then(ret => {
+                    this.getWaitInfo();
                 })
             },
+            toPay() {
+                this.confirmPage = true;
+                this.setStatus(2)
+            },
+
             getWaitInfo() {
                 let url = "/recharge/rechargeWaitRefresh";
                 axios.post(url, {
@@ -519,8 +560,38 @@
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded'
                     }
-                }).then(ret=>{
-                    console.log(ret)
+                }).then(ret => {
+                    console.log("获取");
+                    let list = ret.data.data;
+                    let index = list.findIndex(item => item.userName === this.username);
+                    if (index === -1) {  // -1 没有数据 让创建数据
+
+                    } else if (index === 0) {  // 0 排队完毕
+                        // this.confirmPage = true
+                        this.setStatus(1);
+                        this.readyFlag = true;
+                        this.queue = 0;
+                        this.timer2 = setInterval(()=>{
+                            if(this.time<1){
+                                clearInterval(this.timer2);
+                                this.waitFlag = false;
+                                this.time = 60;
+                                this.setStatus(3)
+                            }
+                            this.time -= 1;
+                        }, 1000)
+                    } else {  // 排队
+                        console.log(ret);
+                        this.name = ret.data.data[ret.data.data.length - 1].accountName;
+                        this.value = ret.data.data[ret.data.data.length - 1].amount;
+                        this.waitFlag = true;
+                        this.queue = list.length;
+                        if (!this.timer) {
+                            this.timer = setInterval(() => {
+                                this.getWaitInfo()
+                            }, 5000)  // todo 注意内存泄露
+                        }
+                    }
                 })
             }
         }
